# voxelGame

./: CMakeLists.txt
src/: game.cpp  includes.hpp
src/graphics/: mesh.cpp  mesh.hpp  planeShader.glslf  shader.cpp  shader.hpp
src/shader/: shader.cpp  shader.hpp
src/window/: camera.hpp  events.cpp  events.hpp  window.cpp  window.hpp
src/world/: world.cpp  world.hpp
